# onthespot

./: .gitignore  README.md  __init__.py  build.bat  build.sh  build.spec  build_linux.sh  build_mac.sh  build_winC1.bat  build_winC2.bat  config.py  exceptions.py  onthespot.py  org.eu.casualsnek.onthespot.desktop  otsconfig.py  requirements.txt  runtimedata.py  setup.cfg  spotutils.py  utils.py
.github/ISSUE_TEMPLATE/: bug_report.md
PKGBUILD/: PKGBUILD
gui/: dl_progressbtn.py  mainui.py  minidialog.py
gui/qtui/: main.ui  notice.ui
src/: portable.py
src/onthespot/: __init__.py  otsconfig.py  runtimedata.py
src/onthespot/common/: formating.py  state.py  url.py  utils.py
src/onthespot/core/: __base__.py  __init__.py  mediaitem.py  search.py  url.py  user.py
src/onthespot/expections/: __init__.py
src/onthespot/gui/: dl_progressbtn.py  mainui.py  minidialog.py  thumb_listitem.py
src/onthespot/gui/qtui/: main.ui
src/onthespot/resources/: org.eu.casualsnek.onthespot.desktop
src/onthespot/session/: login.py  pool.py
src/onthespot/utils/: spotify.py  utils.py
src/onthespot/worker/: __init__.py  downloader.py  media.py  session.py  utility.py
ui/: main.ui  notice.ui
utils/: spotify.py  utils.py
worker/: downloader.py  media.py  session.py  utility.py
