[metadata]
name = onthespot
version = 0.5
description = A simple and easy to use media downloader.
long_description = file: README.md
long_description_content_type = text/markdown
author = Casual Snek
author_email = casualsnek@pm.me
url = https://github.com/causalsnek/onthespot
keywords = music, downloader, audio, onthespot
license = GPL-2.0 License

[options]
package_dir=
    =.
python_requires = >= 3.0
packages = find:
include_package_data = True

[options.entry_points]
console_scripts =
    onthespot_gui = onthespot:main

[options.packages.find]
where=.

[options.package_data]
* = *.ui, *.png
