[metadata]
name = onthespot
version = 0.5
description = A simple and easy to use media downloader.
long_description = file: README.md
long_description_content_type = text/markdown
author = Casual Snek
author_email = casualsnek@pm.me
url = https://github.com/causalsnek/onthespot
keywords = music, downloader, audio, onthespot
license = GPL-2.0 License

[options]
package_dir=
    =src
python_requires = >= 3.0
packages = find:
install_requires =
    async-timeout==4.0.2
    certifi==2022.12.7
    charset-normalizer==3.1.0
    defusedxml==0.7.1
    idna==3.4
    ifaddr==0.2.0
    librespot==0.0.8
    music-tag==0.4.3
    mutagen==1.46.0
    packaging==23.1
    Pillow==9.5.0
    protobuf==3.20.1
    pycryptodomex==3.17
    PyOgg==0.6.14a1
    PyQt5==5.15.9
    PyQt5-Qt5==5.15.2
    PyQt5-sip==12.12.1
    PyQt5-stubs==5.15.6.0
    pyxdg==0.28
    requests==2.28.2
    show-in-file-manager==1.1.4
    urllib3==1.26.15
    websocket-client==1.5.1
    zeroconf==0.55.0
    winsdk;platform_system=='Windows'

[options.entry_points]
console_scripts =
    onthespot_gui = onthespot:main

[options.packages.find]
where=src

[options.package_data]
* = *.ui, *.png, *.desktop
